--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body {
     justify-content: center;
     gap: 25px;
     width: 30%;
+    margin-right: 15px;
 }
 
 .navbar li,
@@ -176,9 +177,8 @@ a {
 }
 
 #about {
-
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -216,7 +216,7 @@ a {
 
 #proyects {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -235,7 +235,9 @@ a {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-
+    gap: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 #proyects .first-line.bottom-border {
@@ -246,7 +248,6 @@ a {
     width: 500px;
     height: 400px;
     border-radius: 20px 20px 15px 7px;
-
     overflow: hidden;
     object-fit: cover;
 }
@@ -499,7 +500,6 @@ footer span {
     }
 
     #proyects {
-        margin-top: 400px;
         height: 100%;
         width: 100%;
     }
