--- a/styles.css
+++ b/styles.css
@@ -1396,278 +1396,8 @@ i:hover {
     }
 }
 
-/* @media(max-width: 425px) {
-    .header {
-        display: none;
-    }
-
-    #presentation {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    }
-
-    #presentation .column-60 {
-        width: 100%;
-        margin-left: 70px;
-        margin-right: 20px;
-    }
-
-    #presentation .column-60 h1 {
-        font-size: 3rem;
-        margin: 0;
-    }
-
-    #presentation .column-60 p {
-        width: 100%;
-        margin-left: -10px;
-
-    }
-
-    #presentation img {
-        width: 200px;
-        height: 200px;
-        margin-bottom: 150px;
-    }
-
-    #presentation .column-40 {
-        width: 100%;
-        margin-left: 0;
-        margin-right: 0;
-    }
-
-    #presentation .column-40 .sections {
-        height: 170px;
-        margin-left: 30px;
-        display: flex;
-        flex-direction: column;
-        flex-wrap: wrap;
-    }
-
-    #presentation .sections.links {
-        margin-left: 0;
-    }
-
-    #presentation .sections.links h3 {
-        margin-left: 30px;
-    }
-
-    #presentation .sections.links ul {
-        gap: 20px;
-        margin-left: -20px;
-    }
-
-    #presentation .sections.links i {
-        width: 100%;
-        font-size: 35px;
-        margin-left: 0;
-    }
-
+@media only screen and (min-width: 1440px) {
     #about {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
         height: 100%;
-    }
-
-    #about .about-text {
-        width: 100%;
-        height: 100%;
-        margin-left: 40px;
-    }
-
-    #about .about-text h2 {
-        text-align: center;
-    }
-
-    #about .development {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    #about .development img {
-        width: 100px;
-    }
-
-    #proyects {
-        height: 100%;
-        width: 100%;
-    }
-
-    #proyects h2 {
-        text-align: center;
-    }
-
-    #proyects .first-line {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    #proyects .first-line .card {
-        margin-bottom: 50px;
-        height: 100%;
-    }
-
-    #proyects .first-line img {
-        width: 320px;
-        height: 200px;
-        margin-left: 105px;
-        filter: none;
-    }
-
-    #proyects .first-line .text-proyect {
-        display: block;
-        transform: translateY(0px);
-        margin-top: 0;
-        margin-left: 110px;
-
-        text-align: left;
-        width: 65%;
-        height: 50%;
-        font-size: 20px;
-    }
-
-    footer {
-        text-align: center;
-        margin-left: 20px;
-    }
-
-
-}
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) {
-    html {
-        scroll-behavior: smooth;
-    }
-
-    #presentation {
-        width: 100%;
-
-    }
-
-}
-
-@media only screen and (min-width: 601px) and (max-width: 1024px) {
-    html {
-        scroll-behavior: smooth;
-    }
-
-    .header {
-        font-size: 1em;
-    }
-
-    #presentation {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-
-    #presentation .column-60 {
-        width: 80%;
-    }
-
-    #presentation .column-60 p {
-        font-size: 1.5rem;
-    }
-
-    #presentation .column-40 .sections.no-show,
-    .column-40 .line {
-        display: none;
-    }
-
-    #presentation .column-40 .sections h3 {
-        font-size: 1.7rem;
-    }
-
-    #presentation .column-40 .sections i {
-        font-size: 3rem;
-    }
-
-    #about .about-text {
-        width: 80%;
-    }
-
-    #about .about-text {
-        font-size: 1.5rem;
-        margin-bottom: 100px;
-    }
-
-    #about .development {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-wrap: wrap;
-    }
-
-    #proyects {
-        height: 100%;
-        width: 100%;
-    }
-
-    #proyects .first-line {
-        height: 100%;
-        width: 100%;
-        margin: 0;
-    }
-
-    #proyects .first-line .card {
-        width: 290px;
-    }
-
-    #proyects .card img {
-        width: 100%;
-        height: 200px;
-        filter: none;
-    }
-
-    #proyects .first-line p {
-        transform: translateY(0px);
-        font-size: 1rem;
     }
 }
-
-@media only screen and (min-width:1025px) and (max-width: 1440px) {
-    #about {
-        width: 100%;
-    }
-
-    #about .about-text {
-        width: 80%;
-
-    }
-
-    #about .about-text h2 {
-        text-align: center;
-    }
-
-    #about .development {
-        display: flex;
-        flex-wrap: wrap;
-        margin-bottom: 50px;
-    }
-
-    #about .about-text.resumen {
-        margin-bottom: 50px;
-    }
-
-    #proyects {
-        width: 100%;
-        height: 100%;
-    }
-
-    #proyects .first-line .card {
-        width: 400px;
-    }
-
-    #proyects .first-line .card img {
-        filter: none;
-    }
-} */
